--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Release SNHU code
+        run: |
+          echo "Deploy the SNHU Relesae"
+      - uses: Himanshu199430/Deployment@main
+        with:
           owner: Himanshu199430
           repo: Backend
           github_token: ${{ secrets.G_ACCESS_TOKEN }}
