--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,5 @@
 ---
-name: Trigger Deploy test
+name: Trigger Deploy
 
 on:
   push:
@@ -8,7 +8,11 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-run: |
-curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.G_ACCESS_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type:application/json" https://api.github.com/repos/Himanshu199430/Backend/dispatches --data '{"event_type":"build_application"}'
+      - run: |
+          curl -X POST \
+          -H "Authorization: Bearer ${{secrets.G_ACCESS_TOKEN}}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://github.com/Himanshu199430/Backend/actions/workflows/blank.yml/dispatches \
+          -d '{"ref": "main"}'
