--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,9 +11,9 @@ jobs:
       - name: Release SNHU code
         run: |
           echo "Deploy the SNHU Relesae"
-      - uses: Himanshu199430/Backend@master
+      - uses: convictional/trigger-workflow-and-wait@v1.3.0
         with:
-          owner: Himanshumittal1999
+          owner: keithweaver
           repo: Backend
           github_token: ${{ secrets.G_ACCESS_TOKEN }}
           workflow_file_name: blank.yaml
