--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,8 +10,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          curl -X POST \
-          -H "Authorization: Bearer ${{secrets.G_ACCESS_TOKEN}}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/Himanshu199430/Backend/contents/.github/workflows/blank.yaml \
-          -d '{"ref": "main"}'
+          run: |
+           curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.G_ACCESS_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type:application/json" https://api.github.com/repos/Himanshu199430/Backend/dispatches --data '{"event_type":"build_application"}'
