--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - run: |
           run: |
-           curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.G_ACCESS_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type:application/json" https://api.github.com/repos/Himanshu199430/Backend/dispatches --data '{"event_type":"build_application"}'
+           curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.G_ACCESS_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type:application/json" https://github.com/Himanshu199430/Backend/blob/main/.github/workflows/blank.yml/dispatches --data '{"event_type":"build_application"}'
