--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,4 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-           curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.G_ACCESS_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type:application/json" https://github.com/Himanshu199430/Backend/blob/main/.github/workflows/blank.yml/dispatches --data '{"event_type":"build_application"}'
+           curl -H "Accept: application/vnd.github.everest-preview+json" \
+           -H "Authorization: Bearer ${{secrets.G_ACCESS_TOKEN}}" \
+           --request POST \
+           --data '{"event_type": "do-something"}' \
+           https://api.github.com/repos/Himanshu199430/Backend/dispatches
