--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,8 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-           curl -H "Accept: application/vnd.github.everest-preview+json" \
-           -H "Authorization: Bearer ${{secrets.G_ACCESS_TOKEN}}" \
-           --request POST \
-           --data '{"event_type": "do-something"}' \
-           https://github.com/Himanshu199430/Backend/actions/workflows/blank.yml/dispatches
+         curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.G_ACCESS_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/Himanshu199430/Backend/actions/workflows/blank.yaml/dispatches --data '{"ref": "main"}'
