--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,13 +1,22 @@
-name: Trigger Deploy
-
+          
+          
+name: Deploy SNHU Release
 on:
   push:
     branches:
       - main
-
 jobs:
-  deploy:
+  build:
+    name: Release SNHU
     runs-on: ubuntu-latest
     steps:
-      - run: |
-         curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.G_ACCESS_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/Himanshu199430/Backend/actions/workflows/blank.yaml/dispatches --data '{"ref": "main"}'
+    - name: Deploy Stage
+      uses: actions/github-script@v5
+      with:
+        script: |
+          await github.rest.actions.createWorkflowDispatch({
+            'Himanshu199430',
+            'Backend',
+            'workflows/blank.yml',
+            'main',
+          });
