--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,5 +18,5 @@ jobs:
             'Himanshu199430',
             'Backend',
             'workflows/blank.yml',
-            'main',
+            'main'
           });
