--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,18 +3,12 @@ jobs:
   dispatch:
     runs-on: ubuntu-latest
     steps:
-    # - run: |
-    #     curl -u "${{ secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" \
-    #       -H "Accept: application/vnd.github.everest-preview+json" \
-    #       -H "Content-Type: application/json" \
-    #       https://api.github.com/repos/docker-sstc/docker-notify/actions/workflows/main.yml/dispatches \
-    #       --data '{"ref": "master"}'
     - uses: actions/github-script@v6
       with:
         github-token: ${{ secrets.G_ACCESS_TOKEN }}
         script: |
           await github.rest.actions.createWorkflowDispatch({
-            owner: ${{ 'secrets.PAT_USERNAME' }},
+            owner: ${{ secrets.PAT_USERNAME }},
             repo: 'Backend',
             workflow_id: 'blank.yml',
             ref: 'main'
