--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,6 +9,7 @@ jobs:
         #owner: ${{ secrets.PAT_USERNAME }}
         script: |
           await github.rest.actions.createWorkflowDispatch({
+            owner: 'Himanshu199430'
             repo: 'Backend',
             workflow_id: 'blank.yml',
             ref: 'main'
