--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,10 +6,10 @@ jobs:
     - uses: actions/github-script@v6
       with:
         github-token: ${{ secrets.G_ACCESS_TOKEN }}
-        #owner: ${{ secrets.PAT_USERNAME }}
+        owner: ${{ secrets.PAT_USERNAME }}
         script: |
           await github.rest.actions.createWorkflowDispatch({
-            owner: 'Himanshu199430',
+            owner: owner,
             repo: 'Backend',
             workflow_id: 'blank.yml',
             ref: 'main'
